[package]
authors = ["dada"]
build = "build.rs"
edition = "2021"
name = "awesome_info_display"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph ="0.2.23"
audiotags = "0.5.0"
chrono = {version = "0.4.35", features = ["serde"]}
chrono-tz = "0.8.6"
cpu-monitor = "0.1.1"
crc32fast = "1.4.0"
crossbeam-channel = "0.5.12"
debounce = "0.2.2"
iced = {version = "0.12.1", features = ["canvas", "tokio", "image", "debug"]}
image = {version = "0.25.0", default-features = false, features = ["ico"]}
imageproc = "0.24.0"
lazy_static = "1.4.0"
libloading = "0.8.3"
once_cell = "1.19.0"
open-meteo-rs = "0.0.3"
rdev = {version = "0.5.3", features = ["unstable_grab"]}
regex = "1.10.3"
reqwest = {version = "0.11.25", features = ["blocking", "json"]}
rusttype = "0.9.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.114"
serialport = {git = "https://github.com/serialport/serialport-rs"}
signal-hook = "0.3.17"
glob="0.3.1"
systemstat = "0.2.3"
tokio = "1.36.0"
indexmap = { version = "2.2.5", features = ["serde"] }
unicode-segmentation = "1.11.0"
winsafe = {git = "https://github.com/rodrigocfd/winsafe", features = ['user', 'ole']}
named-lock = "0.4.1"
exchange_format = { git = "https://github.com/daniel-prause/exchange-format" }
webp = "0.2.6"
[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winuser", "mmdeviceapi", "combaseapi", "objbase", "endpointvolume", "memoryapi"]}
[build-dependencies]
static_vcruntime = "2.0.0"
winres = "0.1.12"
