[package]
authors = ["dada"]
build = "build.rs"
edition = "2021"
name = "awesome_info_display"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph ="0.2.28"
audiotags = "0.5.0"
chrono = {version = "0.4.38", features = ["serde"]}
chrono-tz = "0.10.0"
cpu-monitor = "0.1.1"
crc32fast = "1.4.2"
crossbeam-channel = "0.5.13"
debounce = "0.2.2"
iced = {version = "0.12.1", features = ["canvas", "tokio", "image", "debug"]}
image = {version = "0.25.4", default-features = false, features = ["ico"]}
imageproc = "0.25.0"
lazy_static = "1.5.0"
libloading = "0.8.5"
once_cell = "1.19.0"
open-meteo-rs = "0.0.4"
rdev = {version = "0.5.3", features = ["unstable_grab"]}
regex = "1.10.6"
reqwest = {version = "0.12.9", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.125"
serialport = {git = "https://github.com/serialport/serialport-rs"}
signal-hook = "0.3.17"
glob="0.3.1"
systemstat = "0.2.3"
tokio = "1.39.2"
indexmap = { version = "2.4.0", features = ["serde"] }
unicode-segmentation = "1.11.0"
winsafe = {git = "https://github.com/rodrigocfd/winsafe", features = ['user', 'ole']}
named-lock = "0.4.1"
exchange_format = { git = "https://github.com/daniel-prause/exchange-format" }
webp = "0.3.0"
[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winuser", "mmdeviceapi", "combaseapi", "objbase", "endpointvolume", "memoryapi"]}
[build-dependencies]
static_vcruntime = "2.0.0"
winres = "0.1.12"
