[package]
authors = ["dada"]
build = "build.rs"
edition = "2021"
name = "awesome_info_display"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph ="0.2.32"
audiotags = "0.5.0"
chrono = {version = "0.4.42", features = ["serde"]}
chrono-tz = "0.10.4"
cpu-monitor = "0.1.1"
crc32fast = "1.5.0"
crossbeam-channel = "0.5.15"
debounce = "0.2.2"
iced = {version = "0.13.1", features = ["canvas", "tokio", "image", "debug"]}
image = {version = "0.25.8", default-features = false, features = ["ico"]}
imageproc = "0.25.0"
lazy_static = "1.5.0"
libloading = "0.9.0"
once_cell = "1.21.3"
open-meteo-rs = "0.0.4"
rdev = {version = "0.5.3", features = ["unstable_grab"]}
regex = "1.12.2"
reqwest = {version = "0.12.24", features = ["blocking", "json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serialport = {git = "https://github.com/serialport/serialport-rs"}
signal-hook = "0.3.18"
glob="0.3.3"
systemstat = "0.2.5"
tokio = "1.48.0"
indexmap = { version = "2.12.0", features = ["serde"] }
unicode-segmentation = "1.11.0"
winsafe = {git = "https://github.com/rodrigocfd/winsafe", features = ['user', 'ole', 'kernel']}
named-lock = "0.4.1"
exchange_format = { git = "https://github.com/daniel-prause/exchange-format" }
webp = "0.3.1"
[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winuser", "mmdeviceapi", "combaseapi", "objbase", "endpointvolume", "memoryapi"]}
[build-dependencies]
static_vcruntime = "2.0.0"
winres = "0.1.12"
